# half-integer-spin

./: .gitignore  Cargo.toml  Makefile  README.md  simple.wasm
guest/javascript/: README.md  componentize.js  guest.js  hello.js  pnpm-lock.yaml  runtime.js
guest/rust/: Cargo.toml  Makefile
guest/rust/src/: lib.rs
host/: Cargo.toml
host/basic/: Cargo.toml
host/basic/src/: main.rs
host/spin/: Cargo.toml
host/spin/src/: factors.rs  main.rs
host/src/: lib.rs
host/world/: Cargo.toml
host/world/src/: lib.rs
modules/simple/: Cargo.toml  spin.toml
modules/simple/src/: lib.rs
runtime-factors/: Cargo.toml
runtime-factors/src/: build.rs  env.rs  helper.rs  lib.rs
wasm/rust/: Cargo.toml
wasm/rust/src/: http.rs  lib.rs
wit/: custom.wit
wit-js/: custom.wit
