[workspace]
resolver = "2"
members = ["runtime-factors"]

[workspace.dependencies]
spin-app = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-common = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-core = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factor-key-value = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factor-llm = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factor-outbound-http = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factor-outbound-mqtt = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factor-outbound-mysql = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factor-outbound-networking = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factor-outbound-pg = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factor-outbound-redis = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factor-sqlite = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factor-variables = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factor-wasi = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factors = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factors-executor = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factors-test = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-loader = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
# spin-runtime-config = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-telemetry = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-trigger = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
terminal = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
