[workspace]
resolver = "2"
members = [
  "host",
  "wasm/rust",
]


[workspace.dependencies]
spin-app = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-common = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-core = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-factor-key-value = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-factor-llm = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-factor-outbound-http = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-factor-outbound-mqtt = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-factor-outbound-mysql = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-factor-outbound-networking = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-factor-outbound-pg = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-factor-outbound-redis = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-factor-sqlite = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-factor-variables = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-factor-wasi = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-factors = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-factors-executor = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-factors-test = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-loader = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-telemetry = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
spin-trigger = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }
terminal = { git = "https://github.com/spinframework/spin", rev = "5947a2cfbccf641b128ac11d33164271287edba8" }

spin-sdk = { git = "https://github.com/spinframework/spin-rust-sdk.git", rev = "60d00f77fe0665d6eb8dde9581cf9481e126171f" }
