[package]
name = "host-example"
version = "0.1.0"
edition = "2024"
autobenches = false

[[bin]]
path = "src/bin/main.rs"
name = "main"

[[bin]]
path = "src/bin/basic.rs"
name = "basic"

[features]
default_features = []
spin_trigger = ["dep:spin-trigger"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "3.2", features = ["derive", "env"] }
spin-common = { workspace = true }
spin-factor-key-value = { workspace = true }
spin-factor-outbound-http = { workspace = true }
spin-factor-outbound-networking = { workspace = true }
spin-factor-variables = { workspace = true }
spin-factor-wasi = { workspace = true }
spin-factors = { workspace = true }
spin-factors-executor = { workspace = true }
spin-trigger = { workspace = true, optional = true }
terminal = { workspace = true }
tokio = { version = "^1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
async-trait = "0.1.88"
spin-app = { workspace = true }
spin-core = { workspace = true }
spin-loader = { workspace = true }
spin-telemetry = { workspace = true, features = ["testing"] }
tempfile = "3.20.0"
toml = "0.9.4"
# Needs to match Spin's wasmtime.
wasmtime = "35.0.0"
wasmtime-wasi = "35.0.0"
# wasmtime = "33.0.2"
