[package]
name = "basic-host"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = "1.6.0"
tokio = { version = "^1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
world = { workspace = true }
